# ros2-python-tutorial

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROS2_LEARNING_PLAN.md
01_basics/: README.md  hello_ros2.py  multi_role_node.py  parameter_node.py  publisher.py  service_client.py  service_server.py  subscriber.py
02_workspace/: QUICK_START.md  README.md
02_workspace/cpp_package_example/: CMakeLists.txt  package.xml
02_workspace/cpp_package_example/src/: simple_publisher.cpp  simple_subscriber.cpp
02_workspace/python_package_example/: package.xml  setup.py
02_workspace/python_package_example/python_package_example/: simple_publisher.py  simple_subscriber.py
03_communication/: README.md  action_client.py  action_server.py  async_service_client.py  async_service_server.py  custom_msg_publisher.py  custom_msg_subscriber.py  multi_node_system.py  topic_communication.py
03_communication/custom_interfaces/: CMakeLists.txt  package.xml
03_communication/custom_interfaces/action/: Fibonacci.action  Navigate.action
03_communication/custom_interfaces/msg/: RobotStatus.msg  SensorData.msg
03_communication/custom_interfaces/srv/: ComputeTrajectory.srv  SetMode.srv
04_launch/: QUICK_START.md  README.md  composed_launch.py  conditional_launch.py  multi_node_launch.py  namespace_launch.py  params_launch.py  simple_launch.py
04_launch/config/: params.yaml  robot_config.yaml
04_launch/nodes/: listener.py  talker.py
05_tf2/: README.md  dynamic_tf_publisher.py  robot_tf_tree.py  static_tf_publisher.py  tf_broadcaster.py  tf_listener.py  turtle_tf_broadcaster.py  turtle_tf_listener.py
06_robot_modeling/: QUICK_START.md  README.md  display_robot.py  joint_controller.py  state_publisher.py
06_robot_modeling/config/: robot_description.yaml
06_robot_modeling/urdf/: mobile_robot.urdf  sensor_robot.urdf  simple_robot.urdf
06_robot_modeling/xacro/: materials.xacro  robot.xacro  robot_base.xacro  robot_sensors.xacro
07_tools/: README.md  bag_recorder.py  logger_demo.py  param_manager.py  topic_monitor.py
08_visualization/: README.md  grid_map_visualizer.py  image_publisher.py  interactive_marker.py  path_visualizer.py  point_cloud_publisher.py  rviz_marker_publisher.py
09_sensors/: README.md  camera_simulator.py  image_processor.py  imu_processor.py  imu_simulator.py  laser_scan_processor.py  laser_scan_simulator.py  obstacle_detector.py  sensor_fusion.py
10_navigation/: README.md  goal_sender.py  localization_demo.py  map_builder.py  obstacle_avoider.py  path_planner.py  simple_navigator.py  waypoint_follower.py
10_navigation/config/: navigation_params.yaml
11_final_project/: PROJECT_GUIDE.md  README.md
11_final_project/config/: navigation_config.yaml  robot_params.yaml  sensor_config.yaml
11_final_project/launch/: robot_bringup.py
11_final_project/robot_system/: navigation_controller.py  robot_main.py  sensor_manager.py  task_executor.py  ui_interface.py
notes/: learning_log.md
